Updated notify method