@@ -2,7 +2,11 @@
 Ebay clone using java spaces (University Assignment)
 
 # Instructions for running
-1. add VM argument: -Djava.security.policy=policy.all -Djava.rmi.server.useCodebaseOnly=false
+1. add VM argument: 
+
+-Djava.security.policy=policy.all -Djava.rmi.server.useCodebaseOnly=false  --module-path /local/javafx-sdk-11.0.2/lib --add-modules=javafx.controls,javafx.fxml
+
+
 2. Add the following libraries:
   * jsk-lib.jar
   * outrigger.jar
